--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /src/NerdStore.Catalogo.Application/obj
 /src/NerdStore.Catalogo.Application/bin/Debug/net6.0
 /src/NerdStore.WebApp.MVC/bin/Debug/net6.0
+/src/NerdStore.Vendas.Application/obj
+/src/NerdStore.Vendas.Data/obj
+/src/NerdStore.Vendas.Domain/obj
