--- a/src/NerdStore.Vendas.Application/NerdStore.Vendas.Application.csproj
+++ b/src/NerdStore.Vendas.Application/NerdStore.Vendas.Application.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.5.0" />
-    <PackageReference Include="MediatR" Version="11.1.0" />
+    <Folder Include="Events\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NerdStore.Core\NerdStore.Core.csproj" />
   </ItemGroup>
 
 </Project>
