--- a/src/NerdStore.Core/NerdStore.Core.csproj
+++ b/src/NerdStore.Core/NerdStore.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MediatR" Version="11.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Messages\CommonMessages\IntegrationEvents\" />
+  </ItemGroup>
+
 </Project>
